<resources>
    <string name="app_name">Dein</string>
    <string name="homeslogan">Tasks done right with Dein !</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign-in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="google">Google</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="create_an_account">Create an account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or_sign_up_with">or continue with</string>
    <string name="sign_up">Sign Up</string>
    <string name="isi_field">Please fill all the fields</string>
    <string name="pwSalah">Password does not match</string>
    <string name="suSucceed">Account Created Successfully, Please Sign In</string>
    <string name="hi">Hi, </string>
    <string name="uname">username</string>
    <string name="hyd">How\'s your day?</string>
    <string name="wftd">words for the day ?</string>
</resources>