<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A3F6BB"
    android:padding="20dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/btn_menu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/menubtn" />

        <TextView
            android:id="@+id/hiname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_menu"
            android:fontFamily="@font/quicksand_semibold"
            android:text="@string/hi"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/namehi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_menu"
            android:layout_toEndOf="@id/hiname"
            android:fontFamily="@font/quicksand_semibold"
            android:text="@string/uname"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/hyd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hiname"
            android:fontFamily="@font/quicksand_semibold"
            android:text="@string/hyd"
            android:textSize="25sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_menus"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/hyd"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="-20dp"
            tools:listitem="@layout/rv_menus" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rv_menus"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="5dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/quicknotes"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                app:cardBackgroundColor="#2b2b2b"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/wordsftd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wftd"
                        android:textColor="@color/white"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/quicksand_semibold"
                        android:textSize="16sp"/>

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/write"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/writepng"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:layout_below="@id/wordsftd"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_below="@id/quicknotes"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="185dp"
                app:cardBackgroundColor="#00000000"
                android:layout_height="230dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/todotdshape"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_below="@id/quicknotes"
                android:layout_marginTop="20dp"
                android:layout_marginStart="185dp"
                app:cardBackgroundColor="#00000000"
                android:layout_height="230dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/imgnotesshape"/>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>